# smiscasm

./: .gitignore  Cargo.toml  README.md  build.sh  exit_codes.txt  install-smisc.sh  my_file.txt  production.sh  test_code.s  todo.txt
instructions/: add_i.txt  add_r.txt  adrp_i.txt  adrp_r.txt  cal_i.txt  calr_i.txt  hlt  hlt.txt  initialize.txt  jmp_i.txt  jmp_r.txt  jmpr_i.txt  jmpz_i.txt  jmpz_r.txt  lb_i.txt  lb_r.txt  lsh.txt  lshb.txt  mov_i.txt  mov_r.txt  nand_r.txt  out_i.txt  out_r.txt  ret.txt  sb_r.txt  sub_i.txt  sub_r.txt
src/: config.rs  main.rs
src/assembler/: README.md  assembler.rs  include.rs  mod.rs  order_sections.rs  preprocesser.rs  splitter.rs  tokenizer.rs  valuegen.rs  valuerepl.rs  ya_tokenizer.rs  zstep.rs
src/help/: help.md  help.rs
src/help/commands/: generate-instruction-table.md  get-micro-operation.md  instruction-help.md  output.md
src/help/instructions/: add.md  adrp.md  cal.md  hlt.md  jmp.md  (+7 more)
src/instruction/: instruction.rs  micro_operation.rs  mod.rs
src/util/: code_error.rs  exit.rs  line_mapping.rs  math.rs  mod.rs  replacement.rs
test_code/: .test_code.s.swp  add.s  another_test_code.s  bsc_test.s  bsc_test2.s  bscmath.s  huge_numbers.s  inclusion_stuff1.s  inclusion_stuff2.s  lsh.s  naming_importance.s  nev.s  non_existing_instructions.s  plus_test.s  should_fail.s  should_fail2.s  sp.s  stc.s  test.s  test_code.s  test_line_numbers.s  test_linker.s  test_number_systems.s  yet_another_test_code.s
test_code/bsc_t3/: bsc_test3.s
test_code/pub-libs/: bscmath.s  debuglib.s
test_linker_scripts/: basic_script.sls
(+3 files in other folders)
