[package]
name = "smiscasm"
version = "0.1.0"
edition = "2024"

[dependencies]
colorize = "0.1.0"
backtrace = "0.3.74"
termimad = "0.33.0"
include_dir = "0.7.4"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.12.23"
futures = "0.3.31"
trpl = "0.2.0"
url = "2.5.4"
convert_case = "0.8.0"
